test/corpus/script_section.txt
=====================
Script section basic
=====================
%script

echo "Hello, World!"
echo "Hello, World!"

---

(document
  (section
    (bash_section
        (bash_section_header
            (section_name))
        (bash_content))))

=========================
Script section with space
=========================

%script

printf "Open issues: %s\nClosed issues: %s\n" "34" "65"
---

(document
  (section
    (bash_section
        (bash_section_header
            (section_name))
        (bash_content))))

=====================
Script section with %
=====================
%script

printf "Open issues: %s\nClosed issues: %s\n" "34" "65"

---

(document
  (section
    (bash_section
        (bash_section_header
            (section_name))
        (bash_content))))
